--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Naveenkumar GV</h1>
+        <h1>Naveenkumar Venkataswamy</h1>
         <p>PhD Researcher in AI & Biometrics | Computer Vision Enthusiast</p>
         <p>Currently developing high-quality real-time biometric recognition systems with FPGA and AI.</p>
         
