--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p>I’m a Ph.D. candidate specializing in AI, Machine Learning, Computer Vision, and Biometric Systems, with expertise in signal processing, AI model training, and embedded systems. I have experience designing end-to-end biometric solutions, from research to real-world deployment. Currently, I’m developing an infant iris scanner using NVIDIA Jetson AGX Orin, pushing the boundaries of AI-driven security.</p>
         <p>Passionate about building scalable AI solutions and collaborating on innovative projects in computer vision and biometrics. Let’s connect!</p>
         <div class="links">
-            <a href="https://github.com/your-username" target="_blank">GitHub</a>
+            <a href="https://github.com/naveengv7" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/naveengv/" target="_blank">LinkedIn</a>
         </div>
     </div>
