--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
         <div class="links">
             <a href="https://github.com/naveengv7" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/naveengv/" target="_blank">LinkedIn</a>
-            <a href="mailto:Naveengv74@gmail.com">Email: Naveengv74@gmail.com</a>
-            <a href="https://naveengv7.github.io" target="_blank">Personal Blog</a>
+            <a href="mailto:Naveengv74@gmail.com">Email: naveengv74@gmail.com</a>
         </div>
     </div>
 </body>
