--- a/index.html
+++ b/index.html
@@ -3,62 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naveenkumar Venkataswamy | Portfolio</title>
+    <title>Home | Naveenkumar Venkataswamy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             text-align: center;
         }
         .container {
-            max-width: 800px;
-            margin: 50px auto;
+            max-width: 900px;
+            margin: auto;
             background: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: left;
         }
-        h1 {
-            color: #333;
+        .nav {
+            text-align: center;
+            margin-bottom: 20px;
         }
-        p {
-            color: #555;
-        }
-        .links a {
+        .nav a {
             margin: 10px;
             text-decoration: none;
             color: #0073e6;
             font-weight: bold;
         }
-        .links a:hover {
+        .nav a:hover {
             text-decoration: underline;
-        }
-        .profile-pic img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
         }
     </style>
 </head>
 <body>
+    <div class="nav">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="publications.html">Publications</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    
     <div class="container">
-        <div class="profile-pic">
-            <img src="IMG_2633.JPG" alt="Naveenkumar Venkataswamy">
-        </div>
-        <h1>Naveenkumar Venkataswamy</h1>
-        <p>Research Assistant at <a href="https://citer.clarkson.edu/" target="_blank">CITeR</a></p>
-        
-        <p><strong>About Me:</strong></p>
-        <p>I’m a Ph.D. candidate specializing in AI, Machine Learning, Computer Vision, and Biometric Systems, with expertise in signal processing, AI model training, and embedded systems. I have experience designing end-to-end biometric solutions, from research to real-world deployment. Currently, I’m developing an infant iris scanner using NVIDIA Jetson AGX Orin, pushing the boundaries of AI-driven security.</p>
-        <p>Passionate about building scalable AI solutions and collaborating on innovative projects in computer vision and biometrics. Let’s connect!</p>
-        <div class="links">
-            <a href="https://github.com/naveengv7" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/naveengv/" target="_blank">LinkedIn</a>
-            <a href="mailto:Naveengv74@gmail.com">Email: naveengv74@gmail.com</a>
-        </div>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Hi, I'm Naveenkumar Venkataswamy, a Ph.D. candidate specializing in AI, Machine Learning, and Biometric Systems. Explore my projects and publications to learn more about my work.</p>
     </div>
 </body>
 </html>
