--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
     <div class="container">
         <h1>Publications</h1>
         <ul class="publication-list">
-            <li><a href="publication1.html">Can Machine Learning Algorithms Classify Inner Speech from EEG Brain Signals?</a></li>
+            <li><a href="inner_speech.html">Can Machine Learning Algorithms Classify Inner Speech from EEG Brain Signals?</a></li>
             <li><a href="publication2.html">Support Vector Machine for Person Classification Using EEG Signals</a></li>
         </ul>
     </div>
