--- a/inner_speech.html
+++ b/inner_speech.html
@@ -45,7 +45,7 @@
     </div>
     
     <div class="container">
-        <h1>A Machine Learning Approach to Classify Inner Speech Using EEG Data</h1>
+        <h1>Can Machine Learning Algorithms Classify Inner Speech from EEG Brain Signals?</h1>
         <p><strong>Authors:</strong> Nicholas R Merola, Naveenkumar G Venkataswamy, Masudul H Imtiaz</p>
         <p><strong>Conference:</strong> 2023 IEEE World AI IoT Congress (AIIoT), June 7-10, 2023</p>
         <p><strong>DOI:</strong> <a href="https://doi.org/10.1109/AIIoT58121.2023.10174580" target="_blank">10.1109/AIIoT58121.2023.10174580</a></p>
