--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
         <h1>Publications</h1>
         <ul class="publication-list">
             <li><a href="inner_speech.html">Can Machine Learning Algorithms Classify Inner Speech from EEG Brain Signals?</a></li>
-            <li><a href="publication2.html">Support Vector Machine for Person Classification Using EEG Signals</a></li>
+            <li><a href="eeg_auth.html">Support Vector Machine for Person Classification Using EEG Signals</a></li>
         </ul>
     </div>
 </body>
