--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,11 @@
         <ul class="publication-list">
             <li><a href="inner_speech.html">Can Machine Learning Algorithms Classify Inner Speech from EEG Brain Signals?</a></li>
             <li><a href="eeg_auth.html">Support Vector Machine for Person Classification Using EEG Signals</a></li>
+            <li><a href="face_aware.html">An Open-Source Face-Aware Capture System</a></li>
+            <li><a href="vis_iris.html">Smartphone-based Iris Recognition through High-Quality Visible Spectrum Iris Capture</a></li>
+            <li><a href="ppg_auth.html">User Authentication and Vital Signs Extraction from Low-Frame-Rate and Monochrome No-contact Fingerprint Captures</a></li>
+            <li><a href="ecg_emotion.html">Predicting Emotional States from Wearable ECG</a></li>
+            <li><a href="iris_long.html">Longitudinal Performance of Iris Recognition in Children: Time Intervals up to Six years</a></li>            
         </ul>
     </div>
 </body>
