--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
         <h1>Publications</h1>
         <ul class="publication-list">
             <li><a href="inner_speech.html">Can Machine Learning Algorithms Classify Inner Speech from EEG Brain Signals?</a></li>
-            <li><a href="eeg_auth.html">Support Vector Machine for Person Classification Using EEG Signals</a></li>
+            <li><a href="EEG_auth.html">Support Vector Machine for Person Classification Using EEG Signals</a></li>
             <li><a href="face_aware.html">An Open-Source Face-Aware Capture System</a></li>
             <li><a href="vis_iris.html">Smartphone-based Iris Recognition through High-Quality Visible Spectrum Iris Capture</a></li>
             <li><a href="ppg_auth.html">User Authentication and Vital Signs Extraction from Low-Frame-Rate and Monochrome No-contact Fingerprint Captures</a></li>
