--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         <h1>Contact Me</h1>
         <p>If you'd like to get in touch, feel free to reach out through the following channels:</p>
         <div class="contact-info">
-            <p>Email: <a href="mailto:Naveengv74@gmail.com">Naveengv74@gmail.com</a></p>
+            <p>Email: <a href="mailto:naveengv74@gmail.com">naveengv74@gmail.com</a></p>
             <p>GitHub: <a href="https://github.com/naveengv7" target="_blank">github.com/naveengv7</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/naveengv/" target="_blank">linkedin.com/in/naveengv/</a></p>
         </div>
